# receipts

./: .gitignore  .gitlab-ci.yml  .gitmodules  CODEOWNERS  NEWS  README.md  meson.build  mypy.ini  receipts.doap  requirements.in  requirements.txt  setup.cfg  setup.py  sonar-project.properties  test-requirements.in  test-requirements.txt  tox.ini
build-aux/flatpak/: me.tiernan8r.Receipts.json
build-aux/snap/: snapcraft.yaml
data/: me.tiernan8r.Receipts.gschema.xml  meson.build  receipts.1  receipts.appdata.xml.in  receipts.desktop.in  receipts.gresource.xml
data/logs/: README.md
data/ui/: app-window.ui  app_window.ui  preferences-dialog.ui  receipts.cmb  receipts_gtk3.ui  scan_page.ui
examples/: chatgpt_example1  chatgpt_example1.cpp  chatgpt_example2  chatgpt_example2.cpp  simple
help/: meson.build
help/C/: save.page
help/ar/: ar.po
help/bg/: bg.po
help/ca/: ca.po
help/cs/: cs.po
help/da/: da.po
po/: POTFILES.in  POTFILES.skip  ab.po  af.po  am.po  ar.po  ast.po  az.po  be.po  bg.po  bo.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  gd.po  gl.po  he.po  hr.po  hu.po  hy.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  kk.po  km.po  (+42 more)
src/: COPYING  app-window.vala  app_window.cpp  app_window.h  authorise_dialog.cpp  authorise_dialog.h  authorize-dialog.vala  autosave-manager.vala  autosave_manager.cpp  autosave_manager.h  book.cpp  book.h  book_view.cpp  book_view.h  config.h  drivers-dialog.vala  drivers_dialog.cpp  drivers_dialog.h  input.py  libwebp.cpp  libwebp.h  libwebpmux.h  main.cpp  main.h  main.py  meson.build  output.py  page.cpp  page.h  page_texture.cpp  page_texture.h  page_view.cpp  page_view.h  postprocessor.cpp  postprocessor.h  preferences-dialog.vala  preferences_dialog.cpp  preferences_dialog.h  receipts-postprocessing.sh  receipts.cpp  (+15 more)
subprojects/: libadwaitamm.wrap
tests/: __init__.py  test_main.py
(+35 files in other folders)
