# Copyright (C) 2022  Tiernan8r
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.
[metadata]
license_file = LICENSE
name = receipt_post_processor
author = Tiernan8r
author_email = tiernan8r@pm.me
license = GPL v3
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python

[bdist_wheel]
universal=0 # don't build for python2, only python3

[tool:pytest]

[mypy]

[flake8]
exclude = .git,__pycache__,.tox,.eggs,*.egg,./venv
filename =
    *.py,

